--- a/css/style.css
+++ b/css/style.css
@@ -727,8 +727,13 @@ header .toggle span {
     position: absolute;
     background: rgba(0, 0, 33, 0.9);
     z-index: 5;
-    inset: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    left: 0;
     width: 100%;
+    min-height: 100vh;
+    height: 100vh;
     height: auto;
     display: flex;
     flex-direction: column;
